--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "nanoid": "3.3.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
